--- a/Main.html
+++ b/Main.html
@@ -10,7 +10,7 @@
 
 <body>
   <!--   Hello world -->
-  <script src="Chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <canvas id="line-chart" width="800" height="450"></canvas>
   <!--   <script src="script.js"></script> -->
 
